[metadata]
name = optimus
provides = optimus
description = "optimuslib:"
long_description = file: README.md
long_description_content_type = text/x-md
author = Reza Haqshenas, Pierre Gelat, Elwin vant Wount
author_email = optimus@gmail.com 
license = MIT License
license_file = LICENSE.md
url = https://github.com/optimuslib/optimus
edit_on_github = True
github_project = optimuslib/optimus
platform = any
keywords = science,
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.1

[options]
python_requires = >=3.5
packages = find:
include_package_data=True
install_requires =
  psutil

[options.packages.find]
exclude =
  *.test
  *.tests

[options.extras_require]
docs =
  sphinx
tests =
  pytest
nag =
  naginterfaces

[build_sphinx]
project = 'optimus'
version = 0.1.0
release = 0.1.0
source-dir = docs/source
build-dir = docs/build

# This doesn't work... yet. Added to the Dockerfile directly
# [tool:pip]
# extra-index-url = https://www.nag.com/downloads/py/naginterfaces_nag

[tool:pytest]
minversion = 3.0
testpaths = "optimus"
# Skip sunpy/data to prevent importing the sample data (there are no tests in that dir anyway)
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "vedatmc[\/]data"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
addopts = -p no:warnings --doctest-modules -m "not slow and not nag" --durations=0
markers =
    slow: marks tests as slow - ie. > 100 s - ((de)select with '-m "(not) slow"')
    nag: marks tests as depending of NAG libraries (select them with '-m "nag"')

[pycodestyle]
max_line_length = 100

[flake8]
max-line-length = 100

[isort]
line_length = 100
not_skip = __init__.py
sections = FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
default_section = THIRDPARTY
known_first_party = vedatmc
multi_line_output = 0
balanced_wrapping = True
include_trailing_comma = false
length_sort = True

[yapf]
based_on_style = pep8
COLUMN_LIMIT = 120
SPLIT_ALL_COMMA_SEPARATED_VALUES = False
SPLIT_ALL_TOP_LEVEL_COMMA_SEPARATED_VALUES = True
